# k-llmsat-parse

./: .gitignore  README.md  build.py  convert.py  extract.py  main.py  parse.py  parsing_rules.md  pyproject.toml  render.py  수능2306국어.pdf.txt.json.txt
example/: 수능2111국어.json  수능2111국어_extracted.txt  수능2111국어_parsed.txt  수능2306국어.json  수능2306국어.txt
k_llmsat_parse/: build.py  extract.py  parse.py  render.py  util.py
prompts/수능/: 수능2306국어.txt
